Fix Task Counting Race in ScopedTaskEnvironment::TestTaskTracker

This change introduces OnRunNextTaskCompleted(), called right before
RunNextTask() returns and after all of the task metrics accounting is
complete.

This allows ScopedTaskEnvironment::TestTaskTracker to check the
number of undelayed tasks and number of running tasks in one spot
after all the counters are updated.

Previously, the code performed a lookahead on the number of undelayed
tasks, expected that the number running and number undelayed to be 1
before terminating.

This is racy because there may be multiple tasks in flight and the
number of running tasks could be 1 before all of the undelayed task
accounting is complete (e.g. it could see 2 and then the number will
be 0 immediately after that).

BUG=728216

Change-Id: I669f8da1f43c3a40500dbcab1f96d3677b18f2d8
Reviewed-on: https://chromium-review.googlesource.com/527334
Reviewed-by: Gabriel Charette <gab@chromium.org>
Reviewed-by: Francois Doray <fdoray@chromium.org>
Commit-Queue: Robert Liao <robliao@chromium.org>
Cr-Commit-Position: refs/heads/master@{#477814}
Former-commit-id: 48de879ed5cb3ea81d10710caaf33eec1e2c5d08