base/task_scheduler/task_tracker.cc
@@ -255,6 +255,8 @@ bool TaskTracker::RunNextTask(Sequence* sequence) {
   if (!is_delayed)
     DecrementNumPendingUndelayedTasks();
 
+  OnRunNextTaskCompleted();
+
   return sequence->Pop();
 }
 
