base/test/scoped_task_environment.cc
@@ -60,6 +60,7 @@ class ScopedTaskEnvironment::TestTaskTracker
   // internal::TaskSchedulerImpl::TaskTrackerImpl:
   void PerformRunTask(std::unique_ptr<internal::Task> task,
                       internal::Sequence* sequence) override;
+  void OnRunNextTaskCompleted() override;
 
   // Synchronizes accesses to members below.
   Lock lock_;
@@ -224,14 +225,16 @@ void ScopedTaskEnvironment::TestTaskTracker::PerformRunTask(
     CHECK_GT(num_tasks_running_, 0);
     CHECK(can_run_tasks_);
 
-    // Notify the main thread when no task other than the current one is running
-    // or queued.
-    if (num_tasks_running_ == 1 &&
-        GetNumPendingUndelayedTasksForTesting() == 1 && queue_empty_closure_) {
-      std::move(queue_empty_closure_).Run();
-    }
-
     --num_tasks_running_;
+  }
+}
+
+void ScopedTaskEnvironment::TestTaskTracker::OnRunNextTaskCompleted() {
+  // Notify the main thread when no tasks are running or queued.
+  AutoLock auto_lock(lock_);
+  if (num_tasks_running_ == 0 && GetNumPendingUndelayedTasksForTesting() == 0 &&
+      queue_empty_closure_) {
+    std::move(queue_empty_closure_).Run();
   }
 }
 
